--- a/index.html
+++ b/index.html
@@ -10,185 +10,162 @@
 
 <style>
   :root{
-    --bg-grad1:#fde2e4; --bg-grad2:#dbeafe;
-    --card:#ffffff; --muted:#6b7280; --text:#1f2937; --line:#e5e7eb;
+    /* 基本色（移除所有漸層） */
+    --bg:#f7f8fb; --card:#ffffff; --text:#1f2937; --muted:#6b7280; --line:#e5e7eb;
+
+    --blue-50:#eff6ff; --blue-100:#dbeafe; --blue-200:#bfdbfe; --blue-800:#1e40af;
+    --yellow-100:#fef3c7; --yellow-300:#fcd34d; --yellow-800:#92400e;
 
     --purple-200:#e9d5ff; --purple-300:#d8b4fe; --purple-500:#7c3aed;
     --green-200:#bbf7d0; --green-300:#86efac; --green-500:#22c55e;
 
-    --indigo-200:#c7d2fe; --indigo-300:#a5b4fc; --indigo-400:#818cf8;
-    --indigo-700:#4338ca; --indigo-800:#3730a3; --indigo-900:#312e81;
-
+    --indigo-300:#a5b4fc; --indigo-400:#818cf8; --indigo-800:#3730a3; --indigo-900:#312e81;
     --orange-200:#fed7aa; --orange-300:#fdba74; --orange-500:#f97316;
-
-    --yellow-50:#fffbeb; --yellow-100:#fef3c7; --yellow-200:#fde68a;
-    --yellow-300:#fcd34d; --yellow-800:#92400e;
-
-    --blue-50:#eff6ff; --blue-100:#dbeafe; --blue-200:#bfdbfe; --blue-800:#1e40af;
-
-    --teal-50:#f0fdfa; --teal-600:#0d9488;
-    --red-500:#ef4444;
+    --red-500:#ef4444; --teal-50:#f0fdfa; --teal-600:#0d9488;
   }
 
   *{ box-sizing:border-box }
   html,body{ height:100% }
   body{
-    margin:0;
-    font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
-    color:var(--text);
-    background: linear-gradient(135deg,var(--bg-grad1),var(--bg-grad2));
+    margin:0; background:var(--bg); color:var(--text);
+    font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", "Helvetica Neue", Arial;
   }
 
   .wrap{
-    min-height:100vh;
-    display:flex; flex-direction:column; align-items:center; justify-content:center;
+    min-height:100vh; display:flex; flex-direction:column; align-items:center; justify-content:center;
     padding:16px;
   }
 
-  /* Top nav pills */
+  /* Top nav (兩顆 pill) */
   nav{
-    margin-bottom:24px; padding:16px; background:var(--card);
-    border-radius:16px; box-shadow:0 8px 24px rgba(0,0,0,.08);
+    margin-bottom:20px; padding:12px 16px; background:var(--card);
+    border-radius:12px; box-shadow:0 6px 18px rgba(0,0,0,.06);
     display:flex; flex-wrap:wrap; justify-content:center; gap:12px;
   }
   .pill{
-    border:0; cursor:pointer; padding:12px 20px; border-radius:999px; font-weight:800; font-size:18px;
-    transition:transform .2s ease, background-color .2s ease, box-shadow .2s ease, color .2s ease;
+    border:0; cursor:pointer; padding:10px 18px; border-radius:999px; font-weight:800; font-size:18px;
+    transition:transform .15s ease, background-color .15s ease, box-shadow .15s ease, color .15s ease;
   }
   .pill:hover{ transform:scale(1.05) }
   .pill-purple{ background:var(--purple-200); color:#5b21b6 }
-  .pill-purple.active{ background:var(--purple-500); color:#fff; box-shadow:0 6px 18px rgba(124,58,237,.35) }
+  .pill-purple.active{ background:var(--purple-500); color:#fff; box-shadow:0 6px 16px rgba(124,58,237,.28) }
   .pill-purple:hover{ background:var(--purple-300) }
   .pill-green{ background:var(--green-200); color:#065f46 }
-  .pill-green.active{ background:var(--green-500); color:#fff; box-shadow:0 6px 18px rgba(34,197,94,.35) }
+  .pill-green.active{ background:var(--green-500); color:#fff; box-shadow:0 6px 16px rgba(34,197,94,.28) }
   .pill-green:hover{ background:var(--green-300) }
 
-  /* Layout */
-  main{ width:100%; max-width:1100px; padding:8px; transition:transform .5s ease }
+  /* 內容區 */
+  main{ width:100%; max-width:760px; padding:8px } /* 桌機收窄 */
   section.card{ background:transparent }
 
   h1.title{
-    font-size:clamp(28px,4vw,44px); margin:0 0 18px; font-weight:900; text-align:center;
-    color:#2563eb; text-shadow:0 3px 0 rgba(255,255,255,.4);
+    font-size:clamp(28px,4vw,44px); margin:0 0 16px; font-weight:900; text-align:center; color:#2563eb;
   }
-  .subtitle{ text-align:center; color:var(--muted); margin-top:8px; }
+  /* 移除學習頁的說明文字 */
+  #learningPage .subtitle{ display:none !important; }
 
-  /* ------------------ Learning (10×10 table) ------------------ */
-  .table-wrap{
-    overflow-x:auto;
-  }
+  /* ========== Learning（10×10 乘法表） ========== */
+  .table-wrap{ overflow-x:auto }
   table.mul{
     width:100%;
     border:1px solid var(--blue-200);
-    border-collapse:collapse;   /* 更緊實、避免陰影夾縫 */
+    border-collapse:collapse;                  /* 緊實、不留縫 */
     background:var(--blue-50);
-    border-radius:0 !important; /* 乘法表不要圓角 */
-    box-shadow:0 10px 30px rgba(30,64,175,.08);
-    font-size:clamp(14px, 4.2vw, 18px); /* 手機比第一次更大一點，但不誇張 */
-    table-layout:fixed;         /* 分欄平均，防溢出 */
+    border-radius:0 !important;                /* 不要圓角 */
+    box-shadow:0 8px 20px rgba(30,64,175,.06); /* 輕陰影即可 */
+    font-size:clamp(14px,3.8vw,18px);          /* 手機稍大、但不爆 */
+    table-layout:fixed;                        /* 平均分欄，防橫滑 */
   }
-  .mul th, .mul td{
-    padding:6px 4px;
+  .mul th,.mul td{
+    padding:7px 6px;
     border-bottom:1px solid var(--blue-200);
-    text-align:center;
-    white-space:nowrap;         /* 避免小螢幕換行破表格 */
+    text-align:center; white-space:nowrap;
   }
-  .mul thead th{
-    background:var(--blue-200); color:var(--blue-800); font-weight:800;
-  }
+  .mul thead th{ background:var(--blue-100); color:var(--blue-800); font-weight:800 }
   .mul tbody td:first-child{
     background:#eaf2ff; color:#1d4ed8; font-weight:800; position:sticky; left:0;
   }
-  .mul td.hl, .mul th.hl { background:var(--yellow-100) !important }
-  .mul td.hl-strong, .mul th.hl-strong{ background:var(--yellow-300) !important }
+  .mul td.hl, .mul th.hl { background:#fff7cc !important }           /* 黃色淡亮 */
+  .mul td.hl-strong, .mul th.hl-strong{ background:#ffe066 !important }
 
-  /* 桌機：限制表格最大寬度，避免太扁 */
+  /* 桌機：乘法表容器再收窄一點（避免太扁） */
   @media (min-width:1024px){
     #learningPage .table-wrap{
-      max-width:960px;   /* 你可改 900/980/1000 */
-      margin:0 auto;
+      max-width:700px; margin-left:auto; margin-right:auto;
     }
   }
-  /* 手機：輕貼邊 & 不橫滑 */
+  /* 手機：更貼邊（幾乎無留白） */
   @media (max-width:480px){
-    #learningPage .table-wrap{ padding:0 6px }
-    /* 字體大小已用 clamp 控制到不爆表，不需再降 */
+    .wrap{ padding-left:12px; padding-right:12px }
+    main{ padding:0 }
+    #learningPage .table-wrap{ margin-left:-8px; margin-right:-8px; padding:0 2px }
   }
 
-  /* ------------------ Practice ------------------ */
+  /* ========== Practice（練習） ========== */
   .center{ text-align:center }
   .score{ font-size:clamp(18px,2.5vw,28px); font-weight:800; color:#065f46; margin-bottom:8px }
   .qcount{ font-size:clamp(16px,2.3vw,24px); color:#475569; margin-bottom:18px }
 
   .question-box{
-    display:inline-block; background:var(--yellow-100); padding:24px;
-    border-radius:20px; box-shadow:0 14px 36px rgba(0,0,0,.08);
-    margin-bottom:20px; transform:scale(1.03);
+    display:inline-block; background:var(--yellow-100); padding:22px;
+    border-radius:16px; box-shadow:0 10px 24px rgba(0,0,0,.06);
+    margin-bottom:18px;
   }
-  .question{
-    font-size:clamp(38px,6vw,62px); font-weight:900; color:var(--yellow-800); margin:0;
-  }
+  .question{ font-size:clamp(38px,6vw,62px); font-weight:900; color:var(--yellow-800); margin:0 }
 
   .grid{ display:grid; gap:12px; margin:0 auto }
-  .grid-choices{ grid-template-columns: repeat(2, minmax(0,1fr)); max-width:560px }
-  .grid-multipliers{ grid-template-columns: repeat(5, minmax(0,1fr)); max-width:720px }
+  .grid-choices{ grid-template-columns:repeat(2,minmax(0,1fr)); max-width:520px }
+  .grid-multipliers{ grid-template-columns:repeat(5,minmax(0,1fr)); max-width:720px; margin-bottom:28px } /* 與開始練習拉開 */
+  #btnStart{ margin-top:10px }
 
   .btn{
-    border:0; cursor:pointer; padding:14px 16px; border-radius:16px; font-weight:900;
-    transition:transform .15s ease, box-shadow .2s ease, background-color .15s ease, color .15s ease;
-    box-shadow:0 4px 14px rgba(0,0,0,.08); font-size:clamp(18px,3.2vw,28px)
+    border:0; cursor:pointer; padding:14px 16px; border-radius:14px; font-weight:900;
+    transition:transform .12s ease, box-shadow .15s ease, background-color .12s ease, color .12s ease;
+    box-shadow:0 4px 12px rgba(0,0,0,.06); font-size:clamp(18px,3.2vw,28px)
   }
-  .btn:hover{ transform:scale(1.05) }
+  .btn:hover{ transform:scale(1.04) }
 
-  /* 選項按鈕 */
+  /* 答案選項 */
   .btn-choice{ background:var(--indigo-300); color:#111827 }
   .btn-choice:hover{ background:var(--indigo-400) }
-  .btn-choice.correct{
-    background:var(--green-500) !important; color:#fff !important; transform:scale(1.1);
-    box-shadow:0 8px 24px rgba(34,197,94,.4)
-  }
-  .btn-choice.wrong{ background:var(--red-500) !important; color:#fff !important; transform:scale(1.05) }
+  .btn-choice.correct{ background:var(--green-500) !important; color:#fff !important; transform:scale(1.08) }
+  .btn-choice.wrong{ background:var(--red-500) !important; color:#fff !important; transform:scale(1.03) }
   .btn-choice.dim{ opacity:.55; cursor:not-allowed }
 
-  /* 乘數選單：一般數字仍用橘色，"綜合練習"選中時深紫藍 */
+  /* 乘數按鈕：一般數字橘色；🎲 綜合練習選中=深紫藍（非常明顯） */
   .btn-multi{ background:var(--orange-200); color:#7c2d12; font-size:clamp(20px,3.5vw,30px) }
-  .btn-multi.active{ background:var(--orange-500); color:#fff; box-shadow:0 6px 18px rgba(249,115,22,.35) }
+  .btn-multi.active{ background:var(--orange-500); color:#fff; box-shadow:0 6px 14px rgba(249,115,22,.28) }
   .btn-multi:hover{ background:var(--orange-300) }
-
-  /* 🎲 綜合練習的「選中態」：深紫藍，超明顯（用 !important 壓過 inline） */
   .btn-multi[data-val="all"].active{
-    background:var(--indigo-800) !important;
-    color:#fff !important;
-    box-shadow:0 10px 26px rgba(49,46,129,.55) !important;
+    background:var(--indigo-900) !important; color:#fff !important;
+    box-shadow:0 10px 20px rgba(49,46,129,.5) !important;
     border-color:transparent !important;
   }
-  .btn-multi[data-val="all"].active:hover{
-    background:var(--indigo-700) !important;
-  }
+  .btn-multi[data-val="all"].active:hover{ background:var(--indigo-800) !important }
 
   .btn-start{
-    background:#3b82f6; color:#fff; padding:16px 26px; border-radius:999px; font-weight:900; font-size:clamp(20px,3.8vw,32px);
-    box-shadow:0 10px 28px rgba(59,130,246,.35)
+    background:#3b82f6; color:#fff; padding:14px 24px; border-radius:999px; font-weight:900; font-size:clamp(20px,3.8vw,32px);
+    box-shadow:0 8px 22px rgba(59,130,246,.28)
   }
   .btn-start:disabled{ background:#cbd5e1; color:#475569; cursor:not-allowed; box-shadow:none }
 
   .feedback{ font-size:clamp(20px,3.2vw,32px); font-weight:900; margin-top:10px; animation:bounce 1s infinite }
   @keyframes bounce{ 0%,100%{ transform:translateY(0) } 50%{ transform:translateY(-6px) } }
 
-  /* 結果表 */
+  /* 結果表（保持素色、無漸層） */
   .result-title{
-    font-size:clamp(28px,4vw,44px); font-weight:900; color:var(--teal-600); text-align:center; margin:0 0 16px;
-    text-shadow:0 3px 0 rgba(255,255,255,.5)
+    font-size:clamp(28px,4vw,44px); font-weight:900; color:var(--teal-600);
+    text-align:center; margin:0 0 14px;
   }
   .score-badge{
     display:inline-block; font-size:clamp(36px,6vw,56px); font-weight:900; color:var(--teal-600);
-    background:var(--teal-50); padding:22px 28px; border-radius:999px; box-shadow:0 12px 28px rgba(13,148,136,.25);
-    animation:bounce 1.1s infinite; margin-bottom:20px;
+    background:var(--teal-50); padding:18px 24px; border-radius:999px; box-shadow:0 8px 20px rgba(13,148,136,.18);
+    margin-bottom:16px;
   }
 
   .review{
-    background:var(--card); border-radius:16px; box-shadow:0 10px 24px rgba(0,0,0,.08);
-    padding:14px 16px; overflow-x:auto; margin:0 auto; max-width:800px;
+    background:var(--card); border-radius:12px; box-shadow:0 8px 20px rgba(0,0,0,.06);
+    padding:12px 14px; overflow-x:auto; margin:0 auto; max-width:800px;
   }
   table.review-table{ width:100%; border-collapse:collapse; min-width:520px; font-size:clamp(14px,2.5vw,18px) }
   .review-table th,.review-table td{ padding:10px 12px; border-bottom:1px solid var(--line); text-align:left }
@@ -197,59 +174,37 @@
   .tag-ok{ color:var(--green-500); font-weight:800 }
   .tag-bad{ color:var(--red-500); font-weight:800 }
 
-  .actions{ margin-top:16px; display:flex; flex-direction:column; gap:12px; align-items:center; justify-content:center }
+  .actions{ margin-top:14px; display:flex; flex-direction:column; gap:10px; align-items:center; justify-content:center }
   @media (min-width:720px){ .actions{ flex-direction:row } }
 
   .btn-secondary{
-    background:var(--orange-500); color:#fff; border:0; padding:14px 22px; border-radius:999px; font-weight:900;
-    font-size:clamp(18px,3.2vw,28px); transition:transform .15s ease; box-shadow:0 10px 26px rgba(249,115,22,.35)
+    background:var(--orange-500); color:#fff; border:0; padding:12px 20px; border-radius:999px; font-weight:900;
+    font-size:clamp(18px,3.2vw,28px); transition:transform .12s ease; box-shadow:0 8px 20px rgba(249,115,22,.28)
   }
-  .btn-secondary:hover{ transform:scale(1.05) }
+  .btn-secondary:hover{ transform:scale(1.04) }
 
   .btn-tertiary{
-    background:var(--purple-500); color:#fff; border:0; padding:14px 22px; border-radius:999px; font-weight:900;
-    font-size:clamp(18px,3.2vw,28px); transition:transform .15s ease; box-shadow:0 10px 26px rgba(124,58,237,.35)
+    background:var(--purple-500); color:#fff; border:0; padding:12px 20px; border-radius:999px; font-weight:900;
+    font-size:clamp(18px,3.2vw,28px); transition:transform .12s ease; box-shadow:0 8px 20px rgba(124,58,237,.28)
   }
-  .btn-tertiary:hover{ transform:scale(1.05) }
+  .btn-tertiary:hover{ transform:scale(1.04) }
 
   /* 手機：導覽兩顆同排 */
   @media (max-width:480px){
     nav{
-      display:grid;
-      grid-template-columns:repeat(2, minmax(0, 1fr));
+      display:grid; grid-template-columns:repeat(2, minmax(0, 1fr));
       gap:8px; justify-content:center;
     }
     .pill{ width:100%; padding:10px 12px; font-size:16px }
   }
-/* 📱 手機：讓乘法表更貼近螢幕邊緣 */
-@media (max-width: 480px){
-  /* 外層容器左右縮到 8px（或你想要 0px） */
-  .wrap{ padding-left: 10px; padding-right: 10px; }
 
-  /* 主要內容去掉內距，避免重複留白 */
-  main{ padding: 0; }
+  /* 保險：若有任何頁面底部用到偽元素做色塊，全部移除 */
+  #learningPage::after, #practicePage::after{ content:none !important; }
 
-  /* 乘法表容器「吃回」外層 8px，幾乎貼邊 */
-  #learningPage .table-wrap{
-    margin-left: -8px;
-    margin-right: -8px;
-    padding-left: 2px;   /* 給 2px 緩衝，避免視覺緊張 */
-    padding-right: 2px;
+  /* 版權區塊 */
+  .site-footer{
+    text-align:center; color:#6b7280; font-size:14px; padding:16px 12px; margin-top:20px;
   }
-}
-/* 💻 桌機把整體內容與乘法表都再收窄 */
-@media (min-width: 1024px){
-  /* 整個主要內容容器再窄一點（原本 1100px） */
-  main{ max-width: 900px !important; }
-
-  /* 乘法表容器再窄一點並置中（原本 960px） */
-  #learningPage .table-wrap{
-    max-width: 820px !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
-}
-
 </style>
 
 </head>
@@ -276,6 +231,8 @@
       <div id="practiceContainer" class="center"></div>
     </section>
   </main>
+  <footer class="site-footer">© 2025 Christina Yu</footer>
+
 </div>
 
 <script>
@@ -628,6 +585,7 @@
 </script>
 </body>
 </html>
+
 
 
 
