--- a/index.html
+++ b/index.html
@@ -205,6 +205,23 @@
   .site-footer{
     text-align:center; color:#6b7280; font-size:14px; padding:16px 12px; margin-top:20px;
   }
+  /* 讓 .wrap 吃滿「實際可視高度」，footer 待在最底下，不會再把頁面撐高 */
+.wrap{
+  min-height: 100svh;           /* 用 svh/dvh 避開 100vh 的地址列問題 */
+  display: flex;
+  flex-direction: column;
+}
+
+/* 讓 footer 貼底（但仍在 .wrap 裡），不會再多出多餘高度 */
+.site-footer{
+  margin-top: auto;
+}
+
+/* 手機上避免小小的 scale 造成高度外溢，直接關掉就好（可選） */
+@media (max-width: 480px){
+  .question-box{ transform: none; }
+}
+
 </style>
 
 </head>
@@ -585,6 +602,7 @@
 </script>
 </body>
 </html>
+
 
 
 
