--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+202<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
 <meta charset="utf-8" />
@@ -279,7 +279,7 @@ body{
       <div id="practiceContainer" class="center"></div>
     </section>
   </main>
-  <footer class="site-footer">© 2025 Christina Yu</footer>
+  <footer class="site-footer">© 2025 Christina Yu. All rights reserved.</footer>
 
 </div>
 
@@ -633,6 +633,7 @@ body{
 </script>
 </body>
 </html>
+
 
 
 
